--- a/formulario de inscrição.html
+++ b/formulario de inscrição.html
@@ -14,7 +14,12 @@
 <body>
     <picture id="btnWhatsapp">
         <a href="https://maper.info/29j736" target="_blank">
-          <img src="whatsapp.png" alt="">
+          <video muted autoplay loop>
+            <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+              style="video::internal-media-controls{display: none;}">
+            <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+              style="video::internal-media-controls{display: none;}">
+          </video>
         </a>
       </picture>
     <header>
@@ -25,9 +30,19 @@
                         HOME
                     </a>
                 </li>
+                <li>
+                    <a href="#">
+                        CURSOS
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                        BLOG
+                    </a>
+                </li>
                 <li style="float: right;">
                     <a href="formulario de inscrição.html">
-                        NOS-CONTRATE
+                        AFILIADOS
                     </a>
                 </li>
             </ul>
