--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </p>
     </section>
   </div>
+  <img src="apps.png" style="width: 100%;">
   <div style="background-color: #230d731a;">
     <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
