--- a/index.html
+++ b/index.html
@@ -76,7 +76,20 @@
       </p>
     </section>
   </div>
-  <img src="apps.png" style="width: 100%;">
+  <div class="flex">
+    <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+      <img src="logoPizzabot.png" alt="">
+    </a>
+    <a href="https://pablo-kennediy.github.io/Acai-Bot/">
+      <img src="logoAcai.png" alt="">
+    </a>
+    <a href="https://pablo-kennediy.github.io/Controle-/">
+      <img src="logocontrole +.png" alt="">
+    </a>
+    <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+      <img src="logobarbershopplatform.png" alt="">
+    </a>
+  </div>
   <div style="background-color: #230d731a;">
     <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
