--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </p>
     </section>
   </div>
-  <div class="flex">
+  <div class="flex" id="apps">
     <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
       <img src="logoPizzabot.png" alt="">
     </a>
