--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="static/style.css" />
   <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
   <title>Portifolio</title>
 </head>
@@ -15,9 +15,9 @@
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
       <video muted autoplay loop>
-        <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+        <source src="static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
           style="video::internal-media-controls{display: none;}">
-        <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+        <source src="static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
           style="video::internal-media-controls{display: none;}">
       </video>
     </a>
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="templates/cursos.html">
             CURSOS
           </a>
         </li>
@@ -41,7 +41,7 @@
           </a>
         </li>
         <li style="float: right;">
-          <a href="formulario de inscrição.html">
+          <a href="templates/formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
@@ -49,8 +49,8 @@
     </nav>
   </header>
   <video muted autoplay loop>
-    <source src="primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
-    <source src="Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
+    <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
+    <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
   </video>
   <div class="interface">
     <h1 style="color: #230D73; text-align: justify;">
@@ -78,16 +78,16 @@
   </div>
   <div class="flex" id="apps">
     <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-      <img src="logoPizzabot.png" alt="">
+      <img src="static/logoPizzabot.png" alt="">
     </a>
     <a href="https://pablo-kennediy.github.io/Acai-Bot/">
-      <img src="logoAcai.png" alt="">
+      <img src="static/logoAcai.png" alt="">
     </a>
     <a href="https://pablo-kennediy.github.io/Controle-/">
-      <img src="logocontrole +.png" alt="">
+      <img src="static/logocontrole +.png" alt="">
     </a>
     <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-      <img src="logobarbershopplatform.png" alt="">
+      <img src="static/logobarbershopplatform.png" alt="">
     </a>
   </div>
   <div style="background-color: #230d731a;">
@@ -166,7 +166,7 @@
       uma mistura de engenharia social.
     </p>
     <picture id="grafico">
-      <img src="lucro.png" alt="" />
+      <img src="static/lucro.png" alt="" />
     </picture>
     <h1 id="form">
       Aguardo ancioso para um entrevista.
@@ -195,9 +195,9 @@
       </strong>
     </p>
     <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
-      <img src="facebook.png" alt="" />
-      <img src="instagram.png" alt="" />
-      <img src="twitter.png" alt="" />
+      <img src="static/facebook.png" alt="" />
+      <img src="static/instagram.png" alt="" />
+      <img src="static/twitter.png" alt="" />
     </picture>
   </footer>
   <p style="background-color: white; color: #230D73;">
