--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </li>
       </ul>
     </nav>
+    <img src="../static/logoPK.png" style="width: 0px;" alt="">
   </header>
   <video muted autoplay loop>
     <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
