--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
   </picture>
   <header>
     <nav>
-      <ul>
-        <li>
-          <a href="index.html">
-            HOME
-          </a>
-        </li>
-        <li>
-          <a href="templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li style="float: right;">
-          <a href="templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
+        <ul>
+            <li>
+                <a href="../index.html">
+                    <img src="static/logoPK.png" style="max-width: 30%;" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="templates/cursos.html">
+                    CURSOS
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                    BLOG
+                </a>
+            </li>
+            <li style="float: right;">
+                <a href="/templates/formulario de inscrição.html de inscrição.html">
+                    AFILIADOS
+                </a>
+            </li>
+        </ul>
     </nav>
-  </header>
+</header>
   <video muted autoplay loop>
     <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
     <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
@@ -158,8 +158,33 @@
     <h1 id="form">
       Aguardo ancioso para um entrevista.
     </h1>
-      </div>
+  </div>
+  <section id="apps">
+    <ul>
+      <li>
+        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+          <img src="static/logoPizzabot.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Acai-Bot/">
+          <img src="static/logoAcai.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Controle-/">
+          <img src="static/logocontrole +.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+          <img src="static/logobarbershopplatform.png" alt="">
+        </a>
+      </li>
+    </ul>
+  </section>
   <footer style="background-color: #230d731a; padding: 5px;">
+
     <h2 style="text-align: center;">
       <strong>
         ATENÇÃO !
@@ -182,20 +207,6 @@
       </strong>
     </p>
   </footer>
-  <div class="flex" id="apps">
-    <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-      <img src="static/logoPizzabot.png" alt="">
-    </a>
-    <a href="https://pablo-kennediy.github.io/Acai-Bot/">
-      <img src="static/logoAcai.png" alt="">
-    </a>
-    <a href="https://pablo-kennediy.github.io/Controle-/">
-      <img src="static/logocontrole +.png" alt="">
-    </a>
-    <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-      <img src="static/logobarbershopplatform.png" alt="">
-    </a>
-  </div>
   <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
     <img src="static/facebook.png" alt="" />
     <img src="static/instagram.png" alt="" />
