--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <header>
     <nav>
       <ul>
-        <li>
+        <picture>
           <a href="../index.html">
-            <img src="static/logoPK.png" style="max-width: 50%;" alt="">
+            <img src="static/logoPK.png" alt="">
           </a>
-        </li>
+        </picture>
         <li>
           <a href="templates/cursos.html">
             CURSOS
@@ -38,6 +38,21 @@
         <li>
           <a href="https://www.instagram.com/ti.udia/" target="_blank">
             BLOG
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            SOBRE
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            HALL DA FAMA
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            VALIDAR CERTIFIDADO
           </a>
         </li>
         <li style="float: right;">
