--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
   </picture>
   <header>
     <nav>
+      <a id="logoPK" href="../index.html">
+        <img src="static/logoPK.png" alt="">
+      </a>
       <ul>
-        <picture>
-          <a href="../index.html">
-            <img src="static/logoPK.png" alt="">
-          </a>
-        </picture>
         <li>
           <a href="templates/cursos.html">
             CURSOS
@@ -55,7 +53,7 @@
             VALIDAR CERTIFIDADO
           </a>
         </li>
-        <li style="float: right;">
+        <li>
           <a href="/templates/formulario de inscrição.html de inscrição.html">
             AFILIADOS
           </a>
@@ -67,16 +65,18 @@
     <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
     <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
   </video>
-  <h1 style="color: #230D73; text-align: justify;">
-    PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
-  </h1>
-  <p style=" font-size: medium; max-width: 500px;background-color: #230d731a;">
-    Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
-    atuamos principalmente com a venda e revenda de scripts ou modelos.
-  </p>
-  <h1>
-    Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-  </h1>
+  <section style="background-color: white; margin-top: 100px;">
+    <h1 style="color: #230D73; text-align: justify;">
+      PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+    </h1>
+    <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
+      Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
+      atuamos principalmente com a venda e revenda de scripts ou modelos.
+    </p>
+    <h1>
+      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
+  </section>
   <section>
     <p>
       Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
