--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <section id="apps">
     <ul>
       <li>
-        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+        <a href="https://pablo-kennediy.github.io/snack-platform/">
           <img src="static/logoPizzabot.png" alt="">
         </a>
       </li>
