--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="static/style.css" />
-  <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/static/logoPK.png" type="image/x-icon" />
   <title>Portifolio</title>
 </head>
 
