--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
         <li>
           <a href="#">
-            VALIDAR CERTIFIDADO
+            VALIDAR CERTIFICADO
           </a>
         </li>
         <li>
