--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#sobre">
             SOBRE
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="templates/hall da fama.html">
             HALL DA FAMA
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="templates/validar certificado.html">
             VALIDAR CERTIFICADO
           </a>
         </li>
@@ -69,11 +69,7 @@
     <h1 style="color: #230D73; text-align: justify;">
       PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
     </h1>
-    <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
-      Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
-      atuamos principalmente com a venda e revenda de scripts ou modelos.
-    </p>
-    <h1>
+        <h1>
       Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>
   </section>
@@ -98,7 +94,7 @@
     </p>
   </div>
   <div class="interface">
-    <section>
+    <section id="sobre" >
       <h2>Nossa Missão</h2>
       <ul>
         <li>Elevar marcas e ideias a novos patamares</li>
@@ -108,9 +104,11 @@
     </section>
     <section>
       <h2>Nossa Visão</h2>
-      <p style="background-color: #230d731a;">
-        Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
-        gerar resultados excepcionais para seus clientes.</p>
+<ul>
+  <p style="background-color: #230d731a;">
+    Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
+    gerar resultados excepcionais para seus clientes.</p>
+</ul>
     </section>
     <p style="color: rgb(255, 217, 0) ;"></p>
     <section>
@@ -124,6 +122,13 @@
         <li>Respeito</li>
       </ul>
     </section>
+  <div class="flex" style="max-width: 900px; margin: auto;">  <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
+    Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
+    atuamos principalmente com a venda e revenda de scripts ou modelos.
+  </p>
+  <picture id="grafico">
+    <img src="static/lucro.png" alt="" />
+  </picture></div>
     <section>
       <h2>O que nos diferencia</h2>
       <ul>
@@ -134,17 +139,6 @@
         <li>Atendimento Personalizado</li>
       </ul>
     </section>
-    <section>
-      <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
-      <ul>
-        <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
-        <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
-        <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
-      </ul>
-      <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
-      <p>Seja bem-vindo à PK Produções!</p>
-    </section>
-    <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p style="background-color: #230d731a;">
       Aqui você vai encontrar um grupo de
       <strong style="color:#230D73">
@@ -160,14 +154,22 @@
       </strong>
       atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
+    <section>
+      <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
+      <ul>
+        <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
+        <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
+        <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
+      </ul>
+      <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
+      <p>Seja bem-vindo à PK Produções!</p>
+    </section>
+    <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
       uma mistura de engenharia social.
     </p>
-    <picture id="grafico">
-      <img src="static/lucro.png" alt="" />
-    </picture>
-    <h1 id="form">
+       <h1 id="form">
       Aguardo ancioso para um entrevista.
     </h1>
   </div>
