--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="#sobre">
+          <a href="templates/sobre.html">
             SOBRE
           </a>
         </li>
@@ -60,17 +60,19 @@
         </li>
       </ul>
     </nav>
-  <video muted autoplay loop>
-    <source src="static/primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
-    <source src="static/Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
-  </video>
-</header>
+    <video muted autoplay loop>
+      <source src="static/primeiro.mp4" media="(max-width: 500px)"
+        style="video::internal-media-controls{display: none;}">
+      <source src="static/Infinity.mp4" media="(min-width: 501px)"
+        style="video::internal-media-controls{display: none;}">
+    </video>
+  </header>
 
   <section style="background-color: white; margin-top: 100px;">
     <h1 style="color: #230D73; text-align: justify;">
       PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
     </h1>
-        <h1>
+    <h1>
       Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
     </h1>
   </section>
@@ -95,51 +97,18 @@
     </p>
   </div>
   <div class="interface">
-    <section id="sobre" >
-      <h2>Nossa Missão</h2>
-      <ul>
-        <li>Elevar marcas e ideias a novos patamares</li>
-        <li>Criar conexões autênticas</li>
-        <li>Gerar resultados tangíveis</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Nossa Visão</h2>
-<ul>
-  <p style="background-color: #230d731a;">
-    Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
-    gerar resultados excepcionais para seus clientes.</p>
-</ul>
-    </section>
-    <p style="color: rgb(255, 217, 0) ;"></p>
-    <section>
-      <h2>Nossos Valores</h2>
-      <ul>
-        <li>Criatividade</li>
-        <li>Paixão</li>
-        <li>Excelência</li>
-        <li>Comprometimento</li>
-        <li>Transparência</li>
-        <li>Respeito</li>
-      </ul>
-    </section>
-  <div class="flex" style="max-width: 900px; margin: auto;">  <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
-    Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
-    atuamos principalmente com a venda e revenda de scripts ou modelos.
-  </p>
-  <picture id="grafico">
-    <img src="static/lucro.png" alt="" />
-  </picture></div>
-    <section>
-      <h2>O que nos diferencia</h2>
-      <ul>
-        <li>Experiência e Expertise</li>
-        <li>Criatividade Inovadora</li>
-        <li>Visão Estratégica</li>
-        <li>Foco em Resultados</li>
-        <li>Atendimento Personalizado</li>
-      </ul>
-    </section>
+    <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
+    <p>Seja bem-vindo à PK Produções!</p>
+      <div style=" margin: auto; display: inline-block;">
+      <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
+        Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
+        pago
+        atuamos principalmente com a venda e revenda de scripts ou modelos.
+      </p>
+      <picture id="grafico">
+        <img src="static/lucro.png" alt="" />
+      </picture>
+    </div>    
     <p style="background-color: #230d731a;">
       Aqui você vai encontrar um grupo de
       <strong style="color:#230D73">
@@ -162,30 +131,28 @@
         <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
         <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
       </ul>
-      <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
-      <p>Seja bem-vindo à PK Produções!</p>
-    </section>
+      </section>
     <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
       uma mistura de engenharia social.
     </p>
-       <h1 id="form">
+    <h1 id="form">
       Aguardo ancioso para um entrevista.
     </h1>
   </div>
   <section id="apps">
     <ul>
       <li>
-        <a href="https://pablo-kennediy.github.io/snack-platform/">
-          <img src="static/logoPizzabot.png" alt="">
-        </a>
-      </li>
-      <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
         </a>
       </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/snack-platform/">
+          <img src="static/logoPizzabot.png" alt="">
+        </a>
+      </li> 
       <li>
         <a href="https://pablo-kennediy.github.io/Controle-/">
           <img src="static/logocontrole +.png" alt="">
@@ -222,23 +189,16 @@
     </p>
   </footer>
   <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
-    <img src="static/facebook.png" alt="" />
-    <img src="static/instagram.png" alt="" />
-    <img src="static/twitter.png" alt="" />
-  </picture>
+<a href="https://www.facebook.com/profile.php?id=100063715227252">    <img src="static/facebook.png" alt="" />
+</a>
+    <a href="http://">    <img src="static/instagram.png" alt="" />
+</a>  </picture>
   <p style="background-color: white; color: #230D73;">
     Desenvolvido por
-    <a href="https://www.instagram.com/nike_developer/" target="_blank">
-      <strong>
-        Nike
-      </strong>
-    </a>
-    para a empresa
-    <a href="https://www.instagram.com/ti.udia/" target="_blank">
+        <a href="https://www.instagram.com/ti.udia/" target="_blank">
       <strong>
         PK Produtos Digitais
       </strong>
-      <img src="iconsMoon.png" alt="" />
     </a>
   </p>
   <div
