--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
       Clique
-      <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao
-      <strong>formulario</strong> de inscrição.
+      <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button> para acessar ao
+      <strong>formulario</strong> de inscrição.</a>
     </p>
   </div>
   <div class="interface">
