--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@
     <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
       Clique
-      <a href="templates/formulario de inscrição.html" target="_blank"><button type="button" id="ixd01">aqui</button> para acessar ao
-      <strong>formulario</strong> de inscrição.</a>
+      <a href="templates/formulario de inscrição.html" target="_blank"><button type="button" id="ixd01">aqui</button>
+        para acessar ao
+        <strong>formulario</strong> de inscrição.</a>
     </p>
   </div>
   <div class="interface">
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
     <p>Seja bem-vindo à PK Produções!</p>
-            <picture id="grafico">
-        <img src="static/lucro.png" alt="" />
-      </picture>   
+    <picture id="grafico">
+      <img src="static/lucro.png" alt="" />
+    </picture>
     <p style="background-color: #230d731a;">
       Aqui você vai encontrar um grupo de
       <strong style="color:#230D73">
@@ -122,14 +123,6 @@
       </strong>
       atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
-    <section>
-      <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
-      <ul>
-        <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
-        <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
-        <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
-      </ul>
-      </section>
     <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
@@ -139,31 +132,7 @@
       Aguardo ancioso para um entrevista.
     </h1>
   </div>
-  <section id="apps">
-    <ul>
-      <li>
-        <a href="https://pablo-kennediy.github.io/Acai-Bot/">
-          <img src="static/logoAcai.png" alt="">
-        </a>
-      </li>
-      <li>
-        <a href="https://pablo-kennediy.github.io/snack-platform/">
-          <img src="static/logoPizzabot.png" alt="">
-        </a>
-      </li> 
-      <li>
-        <a href="https://pablo-kennediy.github.io/Controle-/">
-          <img src="static/logocontrole +.png" alt="">
-        </a>
-      </li>
-      <li>
-        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-          <img src="static/logobarbershopplatform.png" alt="">
-        </a>
-      </li>
-    </ul>
-  </section>
-  <footer style="background-color: #230d731a; padding: 5px;">
+   <footer style="background-color: #230d731a; padding: 5px;">
     <h2 style="text-align: center;">
       <strong>
         ATENÇÃO !
@@ -186,16 +155,43 @@
       </strong>
     </p>
   </footer>
+  <section id="apps">
+    <ul>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Acai-Bot/">
+          <img src="static/logoAcai.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/snack-platform/">
+          <img src="static/logoPizzabot.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Controle-/">
+          <img src="static/logocontrole +.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+          <img src="static/logobarbershopplatform.png" alt="">
+        </a>
+      </li>
+    </ul>
+  </section>
   <picture id="redesSociais" style="display: block; margin: auto; padding: 15px;">
-<a href="https://www.facebook.com/profile.php?id=100063715227252">    <img src="static/facebook.png" alt="" />
-</a>
-    <a href="http://">    <img src="static/instagram.png" alt="" />
-</a>  </picture>
+    <a href="https://www.facebook.com/profile.php?id=100063715227252">
+      <img src="static/facebook.png" alt="" />
+    </a>
+    <a href="https://www.instagram.com/ti.udia/">
+      <img src="static/instagram.png" alt="" />
+    </a>
+  </picture>
   <p style="background-color: white; color: #230D73;">
     Desenvolvido por
-        <a href="https://www.instagram.com/ti.udia/" target="_blank">
+    <a href="https://www.instagram.com/nike_developer/" target="_blank">
       <strong>
-        PK Produtos Digitais
+        Nikke
       </strong>
     </a>
   </p>
