--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         style="video::internal-media-controls{display: none;}">
     </video>
   </header>
-
+  <div class="interface">
   <section style="background-color: white; margin-top: 100px;">
     <h1 style="color: #230D73; text-align: justify;">
       PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
@@ -94,33 +94,21 @@
     </p>
   </section>
   <div style="background-color: #230d731a;">
-    <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
-      Clique
-      <a href="templates/formulario de inscrição.html" target="_blank"><button type="button" id="ixd01">aqui</button>
-        para acessar ao
-        <strong>formulario</strong> de inscrição.</a>
+      <strong style="color:#230D73">
+       Desenvolvedores, UI x UX
+     </strong>
+     e estrategistas de trafego
+     <strong style="color: #230D73">
+       organico
+     </strong>
+     e
+     <strong style="color:#230D73">
+       pago
+     </strong>
+     atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
   </div>
-  <div class="interface">
-    <picture id="grafico">
-      <img src="static/lucro.png" alt="" />
-    </picture>
-    <p style="background-color: #230d731a;">
-      Aqui você vai encontrar um grupo de
-      <strong style="color:#230D73">
-        Desenvolvedores, UI x UX
-      </strong>
-      e estrategistas de trafego
-      <strong style="color: #230D73">
-        organico
-      </strong>
-      e
-      <strong style="color:#230D73">
-        pago
-      </strong>
-      atuamos principalmente com a venda e revenda de scripts ou modelos.
-    </p>
     <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
@@ -136,6 +124,8 @@
   </footer>
   <section id="apps">
     <ul>
+      <h2>Projetos</h2>
+
       <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
