--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
     <a href="https://www.instagram.com/ti.udia/">
       <img src="static/instagram.png" alt="" />
     </a>
+    <a href="https://github.com/Pablo-Kennediy">
+      <img src="static/github.png" alt="">
+    </a>
   </picture>
   <p style="background-color: white; color: #230D73;">
     Desenvolvido por
