Up Souza Distribuidora

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <section id="apps">
     <ul>
       <h2>Projetos</h2>
-
+<li><a href="https://www.souzadistribuidora.com.br/"><img src="static/distribuidora souza.png" alt=""></a></li>
       <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
