--- a/index.html
+++ b/index.html
@@ -68,47 +68,47 @@
     </video>
   </header>
   <div class="interface">
-  <section style="background-color: white; margin-top: 100px;">
-    <h1 style="color: #230D73; text-align: justify;">
-      PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
-    </h1>
-    <h1>
-      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-    </h1>
-  </section>
-  <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
-    Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
-    pago
-    atuamos principalmente com a venda e revenda de scripts ou modelos.
-  </p>
-  <section>
-    <p>
-      Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
-      Desenvolvedores</p>
-  </section>
-  <section>
-    <p>
-      Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
-      <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
-      sonha em ter
+    <section style="background-color: white; margin-top: 100px;">
+      <h1 style="color: #230D73; text-align: justify;">
+        PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+      </h1>
+      <h1>
+        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+      </h1>
+    </section>
+    <p style=" font-size: medium; max-width: 500px;background-color: #230d731a; color: #230D73;">
+      Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e
+      pago
+      atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
-  </section>
-  <div style="background-color: #230d731a;">
-    <p>
-      <strong style="color:#230D73">
-       Desenvolvedores, UI x UX
-     </strong>
-     e estrategistas de trafego
-     <strong style="color: #230D73">
-       organico
-     </strong>
-     e
-     <strong style="color:#230D73">
-       pago
-     </strong>
-     atuamos principalmente com a venda e revenda de scripts ou modelos.
-    </p>
-  </div>
+    <section>
+      <p>
+        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
+        Desenvolvedores</p>
+    </section>
+    <section>
+      <p>
+        Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
+        <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
+        sonha em ter
+      </p>
+    </section>
+    <div style="background-color: #230d731a;">
+      <p>
+        <strong style="color:#230D73">
+          Desenvolvedores, UI x UX
+        </strong>
+        e estrategistas de trafego
+        <strong style="color: #230D73">
+          organico
+        </strong>
+        e
+        <strong style="color:#230D73">
+          pago
+        </strong>
+        atuamos principalmente com a venda e revenda de scripts ou modelos.
+      </p>
+    </div>
     <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p>
       Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
@@ -125,7 +125,11 @@
   <section id="apps">
     <ul>
       <h2>Projetos</h2>
-<li><a href="https://www.souzadistribuidora.com.br/"><img src="static/distribuidora souza.png" alt=""></a></li>
+      <!-- <li>
+        <a href="https://www.souzadistribuidora.com.br/">
+          <img src="static/distribuidora souza.png" alt="">
+        </a>
+      </li> -->
       <li>
         <a href="https://pablo-kennediy.github.io/Acai-Bot/">
           <img src="static/logoAcai.png" alt="">
