--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="interface">
     <section style="background-color: white; margin-top: 100px;">
       <h1 style="color: #230D73; text-align: justify;">
-        PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+        INFOPRODUTOS, reconhecida por sua qualidade, inovação e atendimento personalizado.
       </h1>
       <h1>
         Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
@@ -89,7 +89,7 @@
     <section>
       <p>
         Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
-        <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
+        <strong>INFOPRODUTOS</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
         sonha em ter
       </p>
     </section>
@@ -120,7 +120,7 @@
       Aguardo ancioso para um entrevista.
     </h1>
     <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
-    <p>Seja bem-vindo à PK Produções!</p>
+    <p>Seja bem-vindo à INFOPRODUTOS!</p>
   </footer>
   <section id="apps">
     <ul>
