--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </picture>
   <header>
     <nav>
-      <a id="logoPK" href="../index.html">
+      <a id="logoPK" href="index.html">
         <img src="static/logoPK.png" alt="">
       </a>
       <ul>
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li>
-          <a href="/templates/formulario de inscrição.html de inscrição.html">
+          <a href="templates/formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
