--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
   </picture>
   <header>
     <nav>
-      <a id="logoPK" href="index.html">
-        <img src="static/logoPK.png" alt="">
+      <a href="./templates/menu.html">
+        <picture>
+          <img id="menu" src="../static/menu.png" alt="">
+        </picture>
       </a>
-      <ul>
+      <a id="logoPK" href="../index.html">
+        <img src="../static/logoPK.png" alt="">
+      </a>
+      <ul class="minhaDivNavApareceESome">
         <li>
-          <a href="templates/cursos.html">
+          <a href="../templates/cursos.html">
             CURSOS
           </a>
         </li>
@@ -39,33 +44,27 @@
           </a>
         </li>
         <li>
-          <a href="templates/sobre.html">
+          <a href="sobre.html">
             SOBRE
           </a>
         </li>
         <li>
-          <a href="templates/hall da fama.html">
+          <a href="hall da fama.html">
             HALL DA FAMA
           </a>
         </li>
         <li>
-          <a href="templates/validar certificado.html">
+          <a href="validar certificado.html">
             VALIDAR CERTIFICADO
           </a>
         </li>
         <li>
-          <a href="templates/formulario de inscrição.html">
+          <a href="../templates/formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
       </ul>
     </nav>
-    <video muted autoplay loop>
-      <source src="static/primeiro.mp4" media="(max-width: 500px)"
-        style="video::internal-media-controls{display: none;}">
-      <source src="static/Infinity.mp4" media="(min-width: 501px)"
-        style="video::internal-media-controls{display: none;}">
-    </video>
   </header>
   <div class="interface">
     <section style="background-color: white; margin-top: 100px;">
