--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         </li>
       </ul>
     </nav>
+    <video muted autoplay loop>
+      <source src="static/primeiro.mp4" media="(max-width: 500px)"
+        style="video::internal-media-controls{display: none;}">
+      <source src="static/Infinity.mp4" media="(min-width: 501px)"
+        style="video::internal-media-controls{display: none;}">
+    </video>
   </header>
   <div class="interface">
     <section style="background-color: white; margin-top: 100px;">
