--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
     </a>
   </picture>
   <header>
-    <nav>
+    <div class="flex">
       <a href="./templates/menu.html">
         <picture>
           <img id="menu" src="../static/menu.png" alt="">
         </picture>
       </a>
-      <a id="logoPK" href="../index.html">
-        <img src="../static/logoPK.png" alt="">
-      </a>
+      <picture id="logo">
+        <a id="logoPK" href="../index.html">
+          <img src="../static/logoPK.png" alt="">
+        </a>
+      </picture>
+    </div>
+    <nav>
       <ul class="minhaDivNavApareceESome">
         <li>
-          <a href="../templates/cursos.html">
+          <a href="templates/cursos.html">
             CURSOS
           </a>
         </li>
@@ -44,22 +48,22 @@
           </a>
         </li>
         <li>
-          <a href="sobre.html">
+          <a href="templates/sobre.html">
             SOBRE
           </a>
         </li>
         <li>
-          <a href="hall da fama.html">
+          <a href="templates/hall da fama.html">
             HALL DA FAMA
           </a>
         </li>
         <li>
-          <a href="validar certificado.html">
+          <a href="templates/validar certificado.html">
             VALIDAR CERTIFICADO
           </a>
         </li>
         <li>
-          <a href="../templates/formulario de inscrição.html">
+          <a href="templates/formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
