--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     </a>
   </picture>
   <header>
-    <div class="flex">
-      <a href="./templates/menu.html">
-        <picture>
-          <img id="menu" src="../static/menu.png" alt="">
-        </picture>
-      </a>
-      <picture id="logo">
-        <a id="logoPK" href="../index.html">
-          <img src="../static/logoPK.png" alt="">
-        </a>
-      </picture>
-    </div>
-    <nav>
+       <nav>
+        <div class="logoPK" class="flex">
+          <a href="./templates/menu.html">
+            <picture>
+              <img id="menu" src="static/menu.png" alt="">
+            </picture>
+          </a>
+          <picture id="logo">
+            <a id="logoPK" href="#">
+              <img src="../static/logoPK.png" alt="">
+            </a>
+          </picture>
+        </div>
       <ul class="minhaDivNavApareceESome">
         <li>
           <a href="templates/cursos.html">
