--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
           <picture id="logo">
             <a id="logoPK" href="#">
-              <img src="../static/logoPK.png" alt="">
+              <img src="static/logoPK.png" alt="">
             </a>
           </picture>
         </div>
