--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <picture id="btnWhatsapp">
-    <a href="https://maper.info/29j736" target="_blank">
+    <a href="https://maper.info/29j736" style="background-color: white;" target="_blank">
       <video muted autoplay loop>
         <source src="static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
           style="video::internal-media-controls{display: none;}">
