--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
     </a>
   </picture>
   <header>
-       <nav>
-        <div class="logoPK" class="flex">
+  <div class="flex">
+    <a id="logoPK" href="#">
+      <img style="float: right;" src="static/logoPK.png" alt="">
+    </a>
+    <nav>
+      <div class="logoPK" class="flex">
+        <picture id="logo">
           <a href="./templates/menu.html">
             <picture>
               <img id="menu" src="static/menu.png" alt="">
             </picture>
           </a>
-          <picture id="logo">
-            <a id="logoPK" href="#">
-              <img src="static/logoPK.png" alt="">
-            </a>
-          </picture>
-        </div>
+        </picture>
+      </div>
       <ul class="minhaDivNavApareceESome">
         <li>
           <a href="templates/cursos.html">
@@ -69,6 +70,7 @@
         </li>
       </ul>
     </nav>
+  </div>
     <video muted autoplay loop>
       <source src="static/primeiro.mp4" media="(max-width: 500px)"
         style="video::internal-media-controls{display: none;}">
